<resources>
    <string name="app_name">Event Calender</string>
    <string name="prev"><![CDATA[< Prev]]></string>
    <string name="next"><![CDATA[Next >]]></string>
    <string name="event_info_text">Event Information</string>
    <string name="event_title_text">Event Title</string>
    <string name="event_desc_text">Event Description</string>
    <string name="create_new_text">Want to create new account <b><i>Register</i></b></string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="already_acc_text">Already have account? <b><i>Login</i></b></string>
</resources>