<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/event_info_dialog_bg"
    android:padding="@dimen/_8sdp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/event_info_text"
            android:textSize="@dimen/_14sdp"
            android:layout_margin="@dimen/_8sdp"
            android:textStyle="bold"
            android:textAllCaps="true"
            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:hint="@string/event_title_text"
            android:background="@drawable/round_line_bg"
            android:textSize="@dimen/_12sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:id="@+id/et_event_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:text="Date"
            android:foreground="?actionBarItemBackground"
            android:layout_gravity="center"
            android:gravity="center|start"
            android:drawableRight="@drawable/ic_calender_blue"
            android:drawablePadding="@dimen/_10sdp"
            android:background="@drawable/round_line_bg"
            android:textSize="@dimen/_12sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:id="@+id/tv_event_date"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:text="Start Time"
                android:foreground="?actionBarItemBackground"
                android:layout_gravity="center"
                android:gravity="center|start"
                android:drawableRight="@drawable/ic_baseline_access_time"
                android:drawablePadding="@dimen/_10sdp"
                android:background="@drawable/round_line_bg"
                android:textSize="@dimen/_12sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:id="@+id/tv_event_start"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:text="End Time"
                android:foreground="?actionBarItemBackground"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_gravity="center"
                android:gravity="center|start"
                android:drawableRight="@drawable/ic_baseline_access_time"
                android:drawablePadding="@dimen/_10sdp"
                android:background="@drawable/round_line_bg"
                android:textSize="@dimen/_12sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:id="@+id/tv_event_end"/>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_135sdp"
            android:hint="@string/event_desc_text"
            android:background="@drawable/round_line_bg"
            android:textSize="@dimen/_12sdp"
            android:padding="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_gravity="start"
            android:gravity="start|top"
            android:id="@+id/et_event_desc"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save Event"
            android:id="@+id/btn_save_event"
            />

    </LinearLayout>

</RelativeLayout>